@@ -154,8 +154,7 @@ add_period(2048,4) {TimezonePeriod.new(DateTime.new0(Rational.new!(59260457,24),
 add_period(2048,9) {TimezonePeriod.new(DateTime.new0(Rational.new!(9877303,4),0,Date::ITALY),DateTime.new0(Rational.new!(59269193,24),0,Date::ITALY),-14400,3600,:FKST)}
 add_period(2049,4) {TimezonePeriod.new(DateTime.new0(Rational.new!(59269193,24),0,Date::ITALY),DateTime.new0(Rational.new!(9878759,4),0,Date::ITALY),-14400,0,:FKT)}
 add_period(2049,9) {TimezonePeriod.new(DateTime.new0(Rational.new!(9878759,4),0,Date::ITALY),DateTime.new0(Rational.new!(59277929,24),0,Date::ITALY),-14400,3600,:FKST)}
-add_period(2050,4) {TimezonePeriod.new(DateTime.new0(Rational.new!(59277929,24),0,Date::ITALY),DateTime.new0(Rational.new!(9880215,4),0,Date::ITALY),-14400,0,:FKT)}
-add_period(2050,9) {TimezonePeriod.new(DateTime.new0(Rational.new!(9880215,4),0,Date::ITALY),nil,-14400,3600,:FKST)}
+add_period(2050,4) {TimezonePeriod.new(DateTime.new0(Rational.new!(59277929,24),0,Date::ITALY),nil,-14400,0,:FKT)}
 end
 end
 end
